src/objects/ER_Store_to_Loop__c.object
<CustomObject>
    <fields>
        <fullName>ER_Behaviour__c</fullName>
        <label>Behaviour</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ER_Behaviour</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Business_Unit__c</fullName>
        <formula>TEXT( ER_Store__r.Owner:User.ER_Business_Unit__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Loop__c</fullName>
        <label>Loop</label>
        <referenceTo>ER_Loop__c</referenceTo>
        <relationshipLabel>Stores to Loops</relationshipLabel>
        <relationshipName>Stores_to_Loops</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ER_Store__c</fullName>
        <label>Store</label>
        <referenceTo>ER_Store__c</referenceTo>
        <relationshipLabel>Stores to Loops</relationshipLabel>
        <relationshipName>Stores_to_Loops</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Store to Loop</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>STL-{0000}</displayFormat>
        <label>Store to Loop Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stores to Loops</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>